# lidar2osm_ros

./: .gitignore  CMAKE2.txt  CMakeLists.txt  PACKAGE2.xml  README.md  package.xml
config/: liosam_robot1.yaml  liosam_robot2.yaml  liosam_robot3.yaml
include/lidar2osm_ros/: kitti.hpp  map_merger.hpp  robot.hpp  rviz_marker_utils.hpp
launch/: full_mapping_launch.py  play_bags_launch.py  test_map_merging_launch.py  try_liosam_launch.py  try_liosam_raw_launch.py  try_liosam_robot_launch.py  try_multi_liosam_launch.py
msg/: recieved_data.msg
rviz/: full_mapping.rviz  map_merge.rviz  play_bags.rviz  rviz2_layout.rviz  rviz2_layout_02.rviz  rviz2_layout_03.rviz
src/: mapMerge.cpp  map_registration_client.cpp  map_registration_server.cpp  robotDistanceChecker.cpp  robot_distance_checker.cpp  robot_map_accumulator.cpp  robot_map_reciever.cpp  robot_map_reciever2.cpp  robot_map_reciever3.cpp  robot_map_reciever4.cpp  rviz_marker_utils.cpp
srv/: RegisterMap.srv
urdf/: multi_robot.urdf.xacro  single_robot.urdf.xacro
urdf/meshes/dae/: cu_west_campus.dae  hunter_wheel.dae  os_sensor.dae
urdf/meshes/stl/: back-wheel-no-axel.stl  back-wheel-no-axel_c.stl
